--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Colrmake</title>
+    <title>colrmake</title>
   </head>
   <body>
     <noscript>JS is required to run this app. Sorry!</noscript>
